# adventofcode2024

./: pyproject.toml
day01/: a.py
day02/: b.py
day03/: c.py
day04/: d.py
day05/: e.py
day06/: f.py  f2.py
day07/: g.py
day08/: h.py
day09/: i.py  j2.py
day10/: j.py  j2.py
day11/: k.py  k2.py
day12/: l.py
day13/: m.py  m2.py
day14/: n.py
