[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
line-profiler = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
